--- a/group431/Turina/Lab6_Turina.ipynb
+++ b/group431/Turina/Lab6_Turina.ipynb
@@ -27,7 +27,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Большинство процессов, используемых для приближенного нахожения экстремума, можно представить как итерационные в виде: $x^{k+1} = x^k + α^kp^k$, где $p^k$- вектор, определяющий направление движения от точки $x^k$ к точке $x^{k+1}$, $α^k$ - числовой множитель, величина которого задает длину шага в направлении $p^k$."
+    "Большинство процессов, используемых для приближенного нахожения экстремума, можно представить как итерационные в виде: $x^{k+1} = x^k + \alfa^kp^k$, где $p^k$- вектор, определяющий направление движения от точки $x^k$ к точке $x^{k+1}$, $α^k$ - числовой множитель, величина которого задает длину шага в направлении $p^k$."
    ]
   },
   {
