--- a/group431/Turina/Lab7_Turina.ipynb
+++ b/group431/Turina/Lab7_Turina.ipynb
@@ -20,12 +20,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Задана задача Коши: $\n",
+    "Задана задача Коши: $\n",
     "\\begin{gather}\n",
     "   y'(x)=f(x,y(x)), x\\in(a,b)\\\\\n",
     "  y(a)=y^0\n",
     "\\end{gather}\n",
-    "$, где $y(x) - $вектор: $y(x)=(y_1(x),\\ldots,y_n(x))$, $y_0 - $заданный начальный вектор*"
+    "$, где $y(x) - $вектор: $y(x)=(y_1(x),\\ldots,y_n(x))$, $y_0 - $заданный начальный вектор"
    ]
   },
   {
