--- a/group431/Turina/Lab5_Turina.ipynb
+++ b/group431/Turina/Lab5_Turina.ipynb
@@ -20,7 +20,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Вычислить  интеграл $ \\ \\int\\limits_0^\\infty sin(t)\\cdot e^{-i^2t^2}\\,dt$, используя формулу Буля* "
+    "*Вычислить  интеграл $ \\ \\int_0^\\infty sin(t)\\cdot e^{-i^2t^2}\\,dt$, используя формулу Буля* "
    ]
   },
   {
