--- a/group431/Turina/Lab5_Turina.ipynb
+++ b/group431/Turina/Lab5_Turina.ipynb
@@ -350,7 +350,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$n^2\\cdot x_{i}=\\sum_{j=1}^n \\frac{j+4\\cdot sin(j)}{1+2\\cdot i^2 +j^4}\\cdot x_j + \\int\\limits_0^\\infty sin(t)\\cdot e^{-i^2t^2}\\,dt$, где $n$ - число уравнений системы."
+    "$n^2\\cdot x_{i}=\\sum_{j=1}^n \\frac{j+4\\cdot sin(j)}{1+2\\cdot i^2 +j^4}\\cdot x_j + \\int_0^\\infty sin(t)\\cdot e^{-i^2t^2}\\,dt$, где $n$ - число уравнений системы."
    ]
   },
   {
