--- a/group431/Turina/Lab5_Turina.ipynb
+++ b/group431/Turina/Lab5_Turina.ipynb
@@ -20,7 +20,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Вычислить  интеграл $ \\ \\int\\limits_0^\\infty sin(t)\\cdot e^{-i^2t^2}\\,dt$, используя формулу Буля* "
+    "*Вычислить  интеграл $ \\ \\int_0^\\infty sin(t)\\cdot e^{-i^2t^2}\\,dt$, используя формулу Буля* "
    ]
   },
   {
@@ -350,7 +350,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$n^2\\cdot x_{i}=\\sum_{j=1}^n \\frac{j+4\\cdot sin(j)}{1+2\\cdot i^2 +j^4}\\cdot x_j + \\int\\limits_0^\\infty sin(t)\\cdot e^{-i^2t^2}\\,dt$, где $n$ - число уравнений системы."
+    "$n^2\\cdot x_{i}=\\sum_{j=1}^n \\frac{j+4\\cdot sin(j)}{1+2\\cdot i^2 +j^4}\\cdot x_j + \\int_0^\\infty sin(t)\\cdot e^{-i^2t^2}\\,dt$, где $n$ - число уравнений системы."
    ]
   },
   {
@@ -406,7 +406,7 @@
    ],
    "source": [
     "n=1000\n",
-    "#составляем матрциу коэффициентов\n",
+    "#составляем матрицу коэффициентов\n",
     "A=np.zeros((n,n))\n",
     "for i in range(0,n):\n",
     "    for j in range(0,n):\n",
@@ -486,7 +486,7 @@
    "source": [
     "n=10000\n",
     "\n",
-    "#составляем матрциу коэффициентов\n",
+    "#составляем матрицу коэффициентов\n",
     "A=np.zeros((n,n))\n",
     "for i in range(0,n):\n",
     "    for j in range(0,n):\n",
@@ -570,7 +570,7 @@
    "source": [
     "n=20\n",
     "#для n=20 еще раз посчитаем значения\n",
-    "#составляем матрциу коэффициентов\n",
+    "#составляем матрицу коэффициентов\n",
     "A=np.zeros((n,n))\n",
     "for i in range(0,n):\n",
     "    for j in range(0,n):\n",
@@ -624,7 +624,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "График зависимости $||X||$$(y)$, $y$ $-$ номер итерации (норма решения)"
+    "График зависимости $||X||(y)$, $y$ $-$ номер итерации (норма решения)"
    ]
   },
   {
