Update Лаба 6, Тюрина, 431.ipynb

--- a/group431/Turina/Лаба 6, Тюрина, 431.ipynb
+++ b/group431/Turina/Лаба 6, Тюрина, 431.ipynb
@@ -18,9 +18,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Найти точку максимума функции $f(x_1, x_2) =7-3\\cdot(x_1+4)^2-2\\cdot(x_2-3)^2; [x_1^0= -2, x_2^0= 2]$ градиентным\n",
+    "Найти точку максимума функции $f(x_1, x_2) =7-3\\cdot(x_1+4)^2-2\\cdot(x_2-3)^2; [x_1^0= -2, x_2^0= 2]$ градиентным\n",
     "методом с дроблением шага.$(x_1^0,x_2^0)$-начальная точка. Построить график функции. В окрестности точки максимума оценить овражность, построить\n",
-    "линии уровня и траекторию поиска.*"
+    "линии уровня и траекторию поиска."
    ]
   },
   {
